--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,12 @@
 	}],
 
 	"permissions": [
-	     "tabs"
-	]
+		"tabs",
+		"storage"
+	],
+
+	"options_ui": {
+		"page": "options/options.html",
+		"open_in_tab": true
+	}
 }
