--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
 	"content_scripts": [{
 		"matches": ["<all_urls>"],
 		"js": [
-			"js/plugin.js"
+			"plugin/plugin.js"
 		]
 	}],
 
@@ -25,7 +25,7 @@
 	],
 
 	"options_ui": {
-		"page": "options/options.html",
+		"page": "plugin/options.html",
 		"open_in_tab": true
 	}
 }
