--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"manifest_version": 2,
-	"name": "Vertauschte Wörter!",
+	"name": "Vertauschte Woerter!",
 	"version": "1.0.0",
 
 	"description": "Vertauscht Wörter auf Webseiten.",
@@ -27,5 +27,12 @@
 	"options_ui": {
 		"page": "plugin/options.html",
 		"open_in_tab": true
+	},
+	"browser_specific_settings": {
+		"gecko": {
+			"id": "vertauschte-woerter@asozial.org",
+			"strict_min_version": "57.0"
+		}
 	}
+
 }
