--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
 	"name": "Vertauschte Woerter!",
-	"version": "1.0.6",
+	"version": "1.1.0",
 
 	"description": "Vertauscht Wörter auf Webseiten.",
 
@@ -15,6 +15,7 @@
 	"content_scripts": [{
 		"matches": ["<all_urls>"],
 		"js": [
+			"plugin/data.js",
 			"plugin/plugin.js"
 		]
 	}],
