--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,8 @@
 	"content_scripts": [{
 		"matches": ["<all_urls>"],
 		"js": [
-			"plugin/data.js",
+			"plugin/pyodide.js",
+			"plugin/load-python-code.js",
 			"plugin/plugin.js"
 		]
 	}],
