--- a/manifest.json
+++ b/manifest.json
@@ -14,13 +14,15 @@
     "content_security_policy": "script-src 'self' https://cdn.jsdelivr.net/ 'unsafe-eval'; object-src 'self'",
 	"background": {
 		"scripts": [
-			"plugin/pyodide.js",
+			"lib/browser-polyfill.js",
+			"lib/pyodide.js",
 			"plugin/background.js"
 		]
 	},
 	"content_scripts": [{
 		"matches": ["<all_urls>"],
 		"js": [
+			"lib/browser-polyfill.js",
 			"plugin/plugin.js"
 		]
 	}],
